fixEventMapperAndLogic